<resources>
    <string name="app_name">Yelow Bus - Attendant</string>
    <string name="proceed">Proceed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_tab_to_continue">Please select one of the following tabs to continue</string>
    <string name="drive_with_yelow">Drive with Yelow</string>
    <string name="lease_a_vehicle">Lease a Vehicle</string>
    <string name="attach_a_fleet">Attach a Fleet</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_email_mobile_msg"><b>Sign up </b>with email id,city and phone number.</string>
    <string name="our_exec_get_in_touch_msg">(Our Executive will soon get in touch with you please refer the next to see the documents needed)</string>
    <string name="email_id">Email Id</string>
    <string name="city">City</string>
    <string name="mobile_number">Mobile number</string>
    <string name="submit">Submit</string>
    <string name="verify_otp_signup_msg"><b>Verify</b> the OTP Sent to your email Id And phone number.</string>
    <string name="otp">OTP</string>
    <string name="driver_and_attendant_info">Driver\'s and Attendant\'s Info</string>
    <string name="fleet_owner_info">Fleet Owner\'s Info</string>
    <string name="bus_and_driver_info">Bus and Driver Info</string>
    <string name="terms_and_condtions"><![CDATA[Terms & Conditions]]></string>
    <string name="accept_terms_cond"><![CDATA[I accept the terms & conditions]]></string>
    <string name="owners_email_id">Owner\'s Email Id</string>
    <string name="request_holiday">Request Holiday</string>
    <string name="calendar">Calendar</string>
    <string name="notifications">Notifications</string>
    <string name="my_wallet">My Wallet</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="route_maps">Route Maps</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="sos">SOS</string>
    <string name="missed_pickups">Missed Pickups</string>
    <string name="feedback">Feedback</string>
    <string name="call">Call</string>
    <string name="manual_scan">Manual Scan</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="kindly_fill_the_details_same">Kindly fill the details for the same</string>
    <string name="date">Date</string>
    <string name="reason">Reason</string>
    <string name="substitute_arranged">Substitute Arranged</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="plz_select_following_help_call">Please select one of the following reasons to call help.</string>
    <string name="call_our_executive">Call Our Executive</string>
    <string name="technical_problem">Technical Problem</string>
    <string name="accident">Accident</string>
    <string name="child_not_feelng_well">Child Not Feeling Well</string>
    <string name="tyre_accident">Tyre Puncture</string>
    <string name="fuel_empty">Fuel Empty</string>
    <string name="substitute_bus_is_being_arranged">Substitute Bus is being arranged For your route.</string>
    <string name="plz_contact_our_executive_if">(Please contact our executive if you need any help. Please stay by the phone)</string>
    <string name="make_sure_every_child_is_safe"><u>Make sure every child is safe</u></string>
    <string name="ambulance_and_emergency_help_directed">Ambulance and emergency help personnel are been directed to your location.</string>
    <string name="call_the_respective_parents_emergency">Call the respective parent and guardian of the child. In case of emergency divert to nearest hospital.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="pickup">Pick up</string>
    <string name="drop_off">Drop off</string>
    <string name="call_your_admin">Call Your Admin</string>
    <string name="enter_student_id">Enter student Id provided</string>
    <string name="add_attendant">Add Attendant</string>
    <string name="cacncel_subsription">Cancel Subscription</string>
    <string name="change_route">Change Route</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_no">Phone Number</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="done">Done</string>
    <string name="invite_frnds">Invite Friends</string>
    <string name="earn_upto">Earn up to <b>\u20B9 150</b> a day</string>
    <string name="invite_frnds_msg">When your friend sign up with your referral code, you can receive up to ₹150 a day.</string>
    <string name="share_ur_invite_code">Share your invite code</string>
    <string name="invite">Invite</string>
    <string name="owners_name">Owner\'s Name</string>
    <string name="fleet_name">Fleet Name</string>
    <string name="set_password">Set Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="owners_bank_ac_details">Owner\'s Bank Account Details</string>
    <string name="owners_cancelled_cheque">Owner\'s Cancelled Cheque</string>
    <string name="owners_aadhaar_card_photo">Owner\'s Aadhaar Card Photo</string>
    <string name="owners_photo">Owner\'s Photo</string>
    <string name="drivers_name">Driver\'s Name</string>
    <string name="drivers_mobie_no">Driver\'s Mobile Number</string>
    <string name="drivers_aadhaar_photo">Driver\'s Aadhaar Card Photo</string>
    <string name="drivers_photo">Driver\'s Photo</string>
    <string name="license_number">License Number</string>
    <string name="license_photo">License Photo</string>
    <string name="attendants_name">Attendant\'s Name</string>
    <string name="attendants_mobile_no">Attendant\'s Mobile Number</string>
    <string name="attendants_aadhaar_photo">Attendant\'s Aadhaar Card Photo</string>
    <string name="attendants_photo">Attendant\'s Photo</string>
    <string name="bus_photo">Bus Photo</string>
    <string name="no_of_seats">Number of Seats</string>
    <string name="chassis_number">Chassis Number</string>
    <string name="bus_info">Bus Info</string>
    <string name="drivers_email">Driver\'s Email id</string>
    <string name="bus_number">Bus Number</string>
    <string name="bank_ac_details">Bank Accounrt Details</string>
    <string name="cancelled_cheque">Cancelled Cheque</string>
    <string name="owners_aadhaar_card_number">Owner\'s Aadhaar Card Number</string>
    <string name="school_zone_range">Select School or Zone or Range</string>
    <string name="bus_rc_photo">Bus Rc Photo</string>
    <string name="bus_permit_photo">Bus Permit</string>
    <string name="bus_insurance_photo">Bus Insurance</string>
    <string name="define_your_daily_route">Define Your Daily Route</string>
    <string name="pickup_route">Pickup Route</string>
    <string name="drop_route">Drop Route</string>
    <string name="select_route">Select Route</string>
    <string name="stoppages">Stoppages</string>
    <string name="start_time">Start Time</string>
    <string name="select_pickup_route">Select Pickup Route</string>
    <string name="select_drop_route">Select Drop Route</string>
    <string name="network_not_connected">Network not connected</string>
    <string name="err_mobile">Enter 10 digit mobile number</string>
    <string name="err_password">Please enter password</string>
    <string name="msg_acc_under_verifi">Your account is under verification. \n Thank you for your patience</string>
    <string name="email_verification_msg">Please complete the email verification process by checking your email.</string>

</resources>
