<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_driver_attendants_info"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">

        <EditText
            android:id="@+id/edtDriversEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:drawableRight="@drawable/chevron_right"
            android:fontFamily="@font/gibson"
            android:gravity="start|center_vertical"
            android:hint="@string/drivers_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">

        <EditText
            android:id="@+id/edtDriversName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:drawableRight="@drawable/chevron_right"
            android:fontFamily="@font/gibson"
            android:gravity="start|center_vertical"
            android:hint="@string/drivers_name"
            android:inputType="textPersonName"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">

        <EditText
            android:id="@+id/edtDriversMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:drawableRight="@drawable/chevron_right"
            android:fontFamily="@font/gibson"
            android:gravity="start|center_vertical"
            android:hint="@string/drivers_mobie_no"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">
        <TextView
            android:id="@+id/tvDriversAadhaarPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:fontFamily="@font/gibson"
            android:gravity="start|center_vertical"
            android:padding="@dimen/_14sdp"
            android:text="@string/drivers_aadhaar_photo"
            android:drawableRight="@drawable/ic_id_card"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">
        <TextView
            android:id="@+id/tvDriverPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:fontFamily="@font/gibson"
            android:gravity="start|center_vertical"
            android:padding="@dimen/_14sdp"
            android:text="@string/drivers_photo"
            android:drawableRight="@drawable/ic_id_card"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">
        <EditText
            android:id="@+id/edtDriversLicenseNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:drawableRight="@drawable/chevron_right"
            android:fontFamily="@font/gibson"
            android:gravity="start|center_vertical"
            android:hint="@string/license_number"
            android:inputType="text"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">
        <TextView
            android:id="@+id/tvLicensePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:fontFamily="@font/gibson"
            android:gravity="start|center_vertical"
            android:padding="@dimen/_14sdp"
            android:text="@string/license_photo"
            android:drawableRight="@drawable/ic_id_card"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">
        <EditText
            android:id="@+id/edtAttendantsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:drawableRight="@drawable/chevron_right"
            android:fontFamily="@font/gibson"
            android:gravity="start|center_vertical"
            android:hint="@string/attendants_name"
            android:inputType="textPersonName"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">

        <EditText
            android:id="@+id/edtAttendantsMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:drawableRight="@drawable/chevron_right"
            android:fontFamily="@font/gibson"
            android:gravity="start|center_vertical"
            android:hint="@string/attendants_mobile_no"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">
        <TextView
            android:id="@+id/tvAttendantsAadhaarPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:fontFamily="@font/gibson"
            android:gravity="start|center_vertical"
            android:padding="@dimen/_14sdp"
            android:text="@string/attendants_aadhaar_photo"
            android:drawableRight="@drawable/ic_id_card"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">
        <TextView
            android:id="@+id/tvAttendantsPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:fontFamily="@font/gibson"
            android:gravity="start|center_vertical"
            android:padding="@dimen/_14sdp"
            android:text="@string/attendants_photo"
            android:drawableRight="@drawable/ic_id_card"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:hint="@string/set_password"
            android:padding="@dimen/_14sdp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">

        <EditText
            android:id="@+id/edtConfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:hint="@string/conf_password"
            android:padding="@dimen/_14sdp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">

        <EditText
            android:id="@+id/edtBankAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:hint="@string/bank_ac_details"
            android:padding="@dimen/_14sdp"
            android:inputType="text"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">
        <TextView
            android:id="@+id/tvOwnersCancelledCheque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:fontFamily="@font/gibson"
            android:gravity="start|center_vertical"
            android:padding="@dimen/_14sdp"
            android:text="@string/cancelled_cheque"
            android:drawableRight="@drawable/ic_id_card"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_all">
        <EditText
            android:id="@+id/edtSchoolZoneRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_greydark_border"
            android:drawableRight="@drawable/chevron_right"
            android:fontFamily="@font/gibson"
            android:gravity="start|center_vertical"
            android:hint="@string/school_zone_range"
            android:inputType="text"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#3B3B3B"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

</LinearLayout>